make grid for most picked

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -6,6 +6,7 @@
  */
 
 @import "functions";
+@import "container-grid";
 @import "variables";
 @import "mixins";
 @import "root";
@@ -77,4 +78,12 @@ header {
             }
         }
     }
+}
+
+section {
+    margin-bottom: 70px;
+}
+
+.card {
+    height: 100%;
 }
