--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,7 +5,8 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
- 
+
+@import "colorVariables";
 @import "functions";
 @import "variables";
 @import "mixins";
