--- a/src/elements/Form/InputNumber/index.scss
+++ b/src/elements/Form/InputNumber/index.scss
@@ -1,7 +1,9 @@
 @import "../../../assets/scss/colorVariables";
+
 .input-number {
   .input-group {
     background-color: $white;
+
     .input-group-text {
       border: 0;
       cursor: pointer;
@@ -13,14 +15,27 @@
       height: 45px;
       display: flex;
       justify-content: center;
+      align-items: center;
       user-select: none;
+      transition: background-color 0.2s ease;
+
       &.minus {
         background-color: $red;
+
+        &:hover {
+          background-color: darken($red, 10%);
+        }
       }
+
       &.plus {
         background-color: $teal;
+
+        &:hover {
+          background-color: darken($teal, 10%);
+        }
       }
     }
+
     input.form-control {
       min-height: 45px;
       border: 0;
@@ -30,6 +45,7 @@
       background-color: $gray-100;
       padding: 0.575rem 1rem;
       text-align: center;
+      font-size: 16px;
     }
   }
 }
